syntax = "proto3";

package PbConfigs;

message Aero
{
    double angleOfIncidenceFront = 1;
    double angleOfIncidenceRear = 2;
    string flap = 3;
}

message Wheel
{
    double camber = 1;
    double toe = 2;
}

message Damper 
{
    double bound = 1;
    double rebound = 2;
    double preload = 3;
}

message CarConfig
{
    Aero aero = 1;
    Wheel wheelFront = 2;
    Wheel wheelRear = 3;
    Damper damperFront = 4;
    Damper damperRear = 5;
    string wheelCompound = 6;
    double rideHeight = 7;
    string balancing = 8;
    string notes = 9;
}